deploy/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: portfolio

  namespace: portfolio

spec:

  replicas: 2

  selector:

    matchLabels:

      app: portfolio

  template:

    metadata:

      labels:

        app: portfolio

    spec:

      containers:

      - name: portfolio

        image: username/portfolio:v1

        imagePullPolicy: Always

        ports:

        - containerPort: 80
